# ml-digit-at-ufpb

./: pyproject.toml
data/metrics/: linear_regression_metrics.json  logistic_metrics.json  perceptron_metrics.json
notebooks/: projeto.ipynb
notebooks/.ipynb_checkpoints/: projeto-checkpoint.ipynb
src/: classifier.py  constants.py  dataset.py  image.py  linear_regression.py  logistic_regression.py  logistic_regression_with_wd.py  metric.py  perceptron.py
