[tool.poetry]
name = "ml-digit-at-ufpb"
version = "0.1.0"
description = ""
authors = ["Raniere Medeiros <raninho@raninho.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
